# boilerplate_fastapi

./: Makefile  README.md  alembic.ini  pyproject.toml
app/: server.py
core/: settings.py
core/config/: env.py  settings.py  types.py
core/db/: base.py  session.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
