[tool.poetry]
name = "name_project"
version = "0.1.0"
description = ""
authors = ["author_name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------------
# pytest config section
# -------------------------------

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=app --cov-report=term-missing"
asyncio_mode = "auto"

# -------------------------------
# Ruff config section
# -------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "UP",
    "N",
    "ASYNC"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

# -------------------------------
# MyPy config
# -------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true  # можно отключить, если ставишь все types-*